<resources>
    <string name="app_name" translatable="false">Quickly</string>
    <string name="app_signature">Shared using Quicly - minimalistic note-taking application</string>
    <string name="app_source_code_link" translatable="false">https://github.com/ttomovcik/quickly</string>
    <string name="app_bug_tracker" translatable="false">https://github.com/ttomovcik/quickly/issues</string>
    <string name="app_store_link" translatable="false">https://play.google.com/store/apps/details?id=sk.ttomovcik.quickly</string>

    <string name="add_note">Add note</string>
    <string name="add_note_text">Add note text here</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="archive_note">Archive note</string>
    <string name="auto_default">Auto (default)</string>
    <string name="center">Center</string>
    <string name="choose_color">Choose color</string>
    <string name="colorNoteName_amour">Red</string>
    <string name="colorNoteName_cyanite">Blue</string>
    <string name="colorNoteName_lotusPink">Pink</string>
    <string name="colorNoteName_mountainMeadow">Green</string>
    <string name="colorNoteName_reallyOrange">Orange</string>
    <string name="colorNoteName_removeColor">Remove color</string>
    <string name="contentDesc_addNoteBtn">Create new note</string>
    <string name="contentDesc_filterNotification">Filter is active notification icon</string>
    <string name="contentDesc_noteColor">Color tag for this note</string>
    <string name="dark">Dark</string>
    <string name="delete_note">Delete note</string>
    <string name="end">End</string>
    <string name="exiting_on_unsaved_note">Do you want to discard changes and exit?</string>
    <string name="filter_active">You have active filters. Tap here to show all notes.</string>
    <string name="filter_notes">Filter notes</string>
    <string name="help_support">Help &amp; support</string>
    <string name="issue_tracker">Issue tracker</string>
    <string name="last_edited">Last edited:</string>
    <string name="light">Light</string>
    <string name="my_notes">My notes</string>
    <string name="no">No</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="restore_note">Restore</string>
    <string name="right_now">right now</string>
    <string name="settings">Settings</string>
    <string name="share_note">Share note</string>
    <string name="show_only_favorites">Show only favorites</string>
    <string name="title">Title</string>
    <string name="unsaved_changes">There are unsaved changes</string>
    <string name="untitled_note">Untitled note</string>
    <string name="view_archived_notes">View your archived notes</string>
    <string name="welcomeNote_text">Get started by tapping the add note button (bottom right corner by default).</string>
    <string name="welcomeNote_title">Welcome to Quickly!</string>
    <string name="yes">Yes</string>

    <string name="pref_category_accounts">Accounts</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_category_experimental">Experimental features</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_lookAndFeel">Look and feel</string>

    <string name="pref_title_signIn">Sign in</string>
    <string name="pref_title_checkForUpdates">Check for updates</string>
    <string name="pref_title_addAppSignature">Add app singnature to notes</string>
    <string name="pref_title_lockWithFingerPrint">Require fingerprint on startup</string>
    <string name="pref_title_addNoteFabPosition">Position of add new note button</string>
    <string name="pref_title_appTheme">Application theme</string>
    <string name="pref_title_backupNotes">Backup notes to a file</string>
    <string name="pref_title_showAds">Enable ads in menu</string>
    <string name="pref_title_lockApp">Enable app lock</string>
    <string name="pref_title_encryptDb">Encypt notes</string>
    <string name="pref_title_restartApp">Restart app</string>
    <string name="pref_title_restoreNotes">Restore a previous backup</string>
    <string name="pref_title_disableShareBtn">Disable share button</string>
    <string name="pref_title_enableExperimentalFeatures">Enable experimental features</string>
    <string name="pref_title_useFirebaseAsDefaultStorage">Use Firebase instead of SQLite</string>

    <string name="pref_summary_signIn">Sign with to enable sync between devices and backup</string>
    <string name="pref_summary_checkForUpdates">Check for a newer version of Quickly</string>
    <string name="pref_summary_requireFingerprint">Require fingerprint on startup to unlock Quickly</string>
    <string name="pref_summary_lockApp">Add a 4-digit pin to lock Quickly</string>
    <string name="pref_summary_restartApp">Have you tried turning it off and on again?</string>
    <string name="pref_summary_encyptDb">Encrypts notes for extra security</string>
    <string name="pref_summary_addAppSignature">If enabled, all notes will have app signature at the end of note while sharing</string>
    <string name="pref_summary_addNoteFabPosition">Set a preferred Add and Save note button position</string>
    <string name="pref_summary_appTheme">Join the dark side</string>
    <string name="pref_summary_showAds">Shows a banner ad in menu. This helps to keep the development running</string>
    <string name="pref_summary_backupNotes">Export all notes to\n/sdcard/Backups/Quickly/backup.csv</string>
    <string name="pref_summary_restoreNotes">Restore a previous backup from CSV file</string>
    <string name="pref_summary_disableShareBtn">Disable option to share notes from menu</string>
    <string name="pref_summary_enableExperimentalFeatures">I hope you know what you\'re doing</string>
    <string name="pref_summary_useFirebaseAsDefaultStorage">Use Firebase database as default storage. Requires sign-in</string>
</resources>
