<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:background="@drawable/rounded_dialog"
    app:behavior_hideable="false"
    app:behavior_peekHeight="96dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@string/app_name"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_title"
            android:layout_marginBottom="@dimen/dp_8"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_settings_24dp"
                android:drawablePadding="@dimen/dp_16"
                android:focusable="true"
                android:padding="@dimen/dp_16"
                android:text="@string/settings"
                android:textAlignment="viewStart"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_help_outline_24dp"
                android:drawablePadding="@dimen/dp_16"
                android:focusable="true"
                android:padding="@dimen/dp_16"
                android:text="@string/help_support"
                android:textAlignment="viewStart"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_issueTracker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_open_in_new_24dp"
                android:drawablePadding="@dimen/dp_16"
                android:focusable="true"
                android:padding="@dimen/dp_16"
                android:text="@string/issue_tracker"
                android:textAlignment="viewStart"
                android:textAllCaps="false" />
        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>